fix(underline-nav): add overflow-x and overflow-y

--- a/src/navigation/underline-nav.scss
+++ b/src/navigation/underline-nav.scss
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid $gray-200;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 
 .UnderlineNav-body {
